--- a/src/containers/Menu/styles.css
+++ b/src/containers/Menu/styles.css
@@ -1,3 +1,12 @@
 .listMenu {
   width: 250px;
+ position: relative;
+margin: auto;
+height: 100%;
+z-index: 2;
+background: #bebdbd;
+}
+.menu{
+  z-index: 2;
+  position: sticky;
 }
