--- a/src/containers/Menu/styles.css
+++ b/src/containers/Menu/styles.css
@@ -4,9 +4,62 @@
 margin: auto;
 height: 100%;
 z-index: 2;
-background: #bebdbd;
+background: #f7f7f7;
 }
 .menu{
   z-index: 2;
   position: sticky;
+}
+.listImg {
+  width: 90%;
+  height: 273px !important;
+}
+.listContainer {
+  transform: translateY(97px) !important;
+  height: 370px;
+}
+.listGrid {
+  flex-direction: column-reverse;
+  height: 370px;
+}
+.refLink {
+  border-bottom: 1px solid #eee;
+  margin-left: 10px;
+  font-weight: bold;
+  color: #6b6b6b;
+}
+
+.backParent {
+  display: flex;
+  width: 100%;
+  flex-direction: row-reverse;
+  margin-top: 10px;
+  padding: 0 20px;
+  box-sizing: border-box;
+}
+.withdrawInput {
+  border: 0;
+  outline: 0;
+  text-align: center;
+  border-bottom: 1px solid #ccc;
+  height: 35px;
+}
+  
+.withdrawParentInputs {
+  display: flex;
+  flex-direction: row-reverse;
+  width: 100%;
+  justify-content: center;
+}
+.withdrawImg {
+  background: url('../../assets/img/imgWithdraw.jpeg') no-repeat !important;
+  background-size: 350px !important;
+  background-position: center !important;
+
+}
+.affiliateImg {
+  background: url('../../assets/img/imgaffiliate.jpg') no-repeat !important;
+  background-size: 617px !important;
+  background-position: center !important;
+
 }
